# BJComm

./: CMakeLists.txt  README.md  compile.sh  install.sh  test.sh
docs/: binding  setup
docs/bjcomm_javadocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  serialized-form.html
docs/bjcomm_javadocs/nl/bluejayeindhoven/bjcomm/: CommunicationError.html  CommunicationInterface.html  Message.html  Poller.html  Publisher.html  Subscriber.html  package-frame.html  package-summary.html  package-tree.html
docs/examples/: Test.java  TestServer.java  test.cpp  test_server.cpp
include/: error.h  interface.h  message.h  poller.h  publisher.h  subscriber.h
src/cpp/: interface.cpp  message.cpp  poller.cpp  publisher.cpp  subscriber.cpp
src/java/: CommunicationError.java  CommunicationInterface.java  MANIFEST.MF  Message.java  Poller.java  Publisher.java  Subscriber.java
test/: MANIFEST.MF  Test.java  TestServer.java  generator.cpp  message.cpp  poller.cpp  publisher.cpp  subscriber.cpp  test.cpp  test_server.cpp
